fixed - style.css-> z-index burger

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1043,7 +1043,7 @@
                 width: 40px;
                 height: 25px;
                 cursor: pointer;
-                z-index: 999999999;
+                z-index: 999999999999999;
             }
             
         /*  Burger-Lines       */
